Corrected overflow

--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -12,15 +12,16 @@
   
   .card-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr); 
     gap: 20px;
   }
   
   .card {
-    background-color: #bdc3c7;
-    padding: 20px;
+    background-color: #60A5FA; 
+    padding: 40px; 
     border-radius: 10px;
     text-align: center;
     font-size: 1.2rem;
+    color: white; 
   }
   
